<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softblack"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/welcome" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="516dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/my_watchlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mywatchlist_button" />

    <Button
        android:id="@+id/movies_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movieslist_button"/>
</LinearLayout>